--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ body {
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="https://airplanenews4.github.io/grindavikroyal/">Home</a>
+  <a href="https://airplanenews4.github.io/RadiantSociety/">Home</a>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
